--- a/css/global.css
+++ b/css/global.css
@@ -104,7 +104,7 @@
 
 @inport "theme";
 /*
-*鏂囨湰瀵瑰叾鏂瑰紡
+*文本对其方式
 */
 .fe-tl {
   text-align: left; }
@@ -116,52 +116,9 @@
   text-align: right; }
 
 /*
-*瀛椾綋缂╄繘
+*字体缩进
 */
 .fe-t2em {
   text-indent: 2em; }
 
-/* .fe-border{
-	border:1px solid;
-}
-.fe-border-top{
-	border-top:1px solid;
-}
-.fe-border-right{
-	border-right:1px silid;
-}
-.fe-border-bottom{
-	border-bottom:1px solid;
-}
-.fe-border-left{
-	border-left:1px solid;
-}
-
-.fe-border-top-bottom{
-	border-top:1px solid;
-	border-bottom:1px solid;
-}
-.fe-border-left-right{
-	border-left:1px solid;
-	border-right:1px solid;
-}
-
-.fe-border-top-left{
-	border-top:1px solid;
-	border-left:1px solid;
-}
-.fe-border-top-right{
-	border-top:1px solid;
-	border-right:1px solid;
-}
-
-.fe-border-bottom-left{
-	border-bottom:1px solid;
-	border-left:1px solid;
-}
-.fe-border-bottom-right{
-	border-bottom:1px solid;
-	border-right:1px solid;
-} */
-
-/*# sourceMappingURL=base.min.css.map */
+/*# sourceMappingURL=global.css.map */
