--- a/css/global.css
+++ b/css/global.css
@@ -121,4 +121,11 @@
 .fe-t2em {
   text-indent: 2em; }
 
+.full-screen {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0; }
+
 /*# sourceMappingURL=global.css.map */
