--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
   clear: both; }
 
 .welcome-info {
-  font-family: "微软雅黑"; }
+  font-family: "Microsoft YaHei"; }
 
 .welcome-info {
   background: transparent url(../img/trans_5.png) repeat; }
