--- a/css/manager.css
+++ b/css/manager.css
@@ -6,6 +6,9 @@
 .afa-m-imgshow .list:after, .afa-m-m-nav:after, .afa-m-m-nav .nav-list-one:after, .afa-m-m-nav .nav-list-one .item-bottom:after, .afa-m-m-nav .nav-list-two:after {
   clear: both; }
 
+.afa-m-m-nav a h3 {
+  font-family: "Microsoft YaHei"; }
+
 /* ==========================================================================
    引用模块
    ========================================================================== */
@@ -60,7 +63,7 @@
   .afa-m-text .user-photo {
     position: absolute;
     left: -20px;
-    top: -10px;
+    top: 0;
     width: 50px;
     height: 50px;
     border-radius: 100px;
@@ -77,6 +80,7 @@
       .afa-m-text .user-operate a i {
         vertical-align: middle; }
   .afa-m-text .t-content {
+    font-size: 12px;
     padding: 0 20px;
     line-height: 1.5; }
   .afa-m-text .roll-btn-b-left,
@@ -90,15 +94,14 @@
     right: 10px; }
 
 .afa-m-imgshow .list {
-  margin-right: -10px; }
+  margin-right: -8px; }
   .afa-m-imgshow .list .item {
     float: left;
-    margin-right: 10px;
-    width: 232.5px; }
+    margin-right: 8px;
+    width: 234px; }
   .afa-m-imgshow .list .img {
     display: table-cell;
     height: 150px;
-    width: 232.5px;
     line-height: 150px;
     vertical-align: middle;
     text-align: center; }
@@ -109,7 +112,8 @@
   .afa-m-imgshow .list .user {
     position: relative;
     text-align: right;
-    margin: 0 0 20px 0; }
+    margin: 0 0 20px 0;
+    line-height: 30px; }
     .afa-m-imgshow .list .user .tou {
       position: absolute;
       top: 0;
@@ -120,6 +124,41 @@
       border: 2px solid #ffffff; }
     .afa-m-imgshow .list .user a i {
       vertical-align: middle; }
+  .afa-m-imgshow .list .hotel-info {
+    position: relative; }
+    .afa-m-imgshow .list .hotel-info .col-md-8,
+    .afa-m-imgshow .list .hotel-info .col-md-4,
+    .afa-m-imgshow .list .hotel-info .col-md-12 {
+      padding: 0; }
+    .afa-m-imgshow .list .hotel-info .name, .afa-m-imgshow .list .hotel-info .price {
+      font-family: "Microsoft YaHei"; }
+    .afa-m-imgshow .list .hotel-info .name {
+      width: 150px;
+      height: 20px;
+      margin: 0 0 8px;
+      overflow: hidden; }
+      .afa-m-imgshow .list .hotel-info .name a {
+        color: #000000;
+        font-size: 14px;
+        font-weight: bold;
+        line-height: 20px; }
+        .afa-m-imgshow .list .hotel-info .name a:hover {
+          color: #ff7e00; }
+    .afa-m-imgshow .list .hotel-info .price {
+      position: absolute;
+      top: 0;
+      right: 15px;
+      text-align: right;
+      font-size: 14px;
+      color: #ff7e00; }
+      .afa-m-imgshow .list .hotel-info .price b {
+        font-size: 20px; }
+    .afa-m-imgshow .list .hotel-info .address {
+      height: 20px;
+      line-height: 20px;
+      overflow: hidden;
+      font-size: 12px;
+      margin: 0 0 10px; }
 
 /* ==========================================================================
    全程管理页面
