--- a/css/equipment.css
+++ b/css/equipment.css
@@ -111,7 +111,8 @@
     height: 150px;
     line-height: 150px;
     vertical-align: middle;
-    text-align: center; }
+    text-align: center;
+    width: 234px; }
     .afa-m-imgshow .list .img img {
       max-width: 100%;
       max-height: 100%;
@@ -234,5 +235,64 @@
   margin: 0 auto;
   max-width: 100%;
   height: auto; }
+
+/* --------------------------------------------------------------------------
+  	img show
+   -------------------------------------------------------------------------- */
+.afa-m-fe-imgshow {
+  margin: 5px 0; }
+  .afa-m-fe-imgshow .item {
+    padding: 10px;
+    background: #424242;
+    box-sizing: border-box; }
+    .afa-m-fe-imgshow .item .img {
+      height: auto; }
+  .afa-m-fe-imgshow .img .price {
+    position: relative;
+    padding: 5px;
+    background: #7c9d1d;
+    line-height: 1.2;
+    color: #ffffff;
+    text-align: left; }
+    .afa-m-fe-imgshow .img .price p {
+      margin: 0;
+      line-height: 1.5; }
+  .afa-m-fe-imgshow .img .new-price {
+    font-size: 20px;
+    font-weight: bold; }
+  .afa-m-fe-imgshow .img .old-price {
+    font-size: 14px;
+    text-decoration: line-through; }
+  .afa-m-fe-imgshow .img .buy-btn {
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    font-size: 18px;
+    line-height: 1.5;
+    border-radius: 15px;
+    padding: 0 20px;
+    background: #ffffff;
+    color: #7c9d1d; }
+  .afa-m-fe-imgshow .bottom .name {
+    display: block;
+    line-height: 20px;
+    height: 40px;
+    padding: 5px 0;
+    overflow: hidden;
+    font-size: 14px;
+    color: #949494;
+    box-sizing: content-box; }
+  .afa-m-fe-imgshow .bottom .info {
+    padding: 0;
+    font-size: 12px;
+    padding-top: 10px; }
+    .afa-m-fe-imgshow .bottom .info .col-md-4, .afa-m-fe-imgshow .bottom .info .col-md-8 {
+      padding: 0;
+      line-height: 20px; }
+    .afa-m-fe-imgshow .bottom .info b, .afa-m-fe-imgshow .bottom .info i {
+      color: #7c9d1d;
+      font-style: normal; }
+    .afa-m-fe-imgshow .bottom .info b {
+      font-size: 16px; }
 
 /*# sourceMappingURL=equipment.css.map */
