--- a/css/manager.css
+++ b/css/manager.css
@@ -114,7 +114,8 @@
     height: 150px;
     line-height: 150px;
     vertical-align: middle;
-    text-align: center; }
+    text-align: center;
+    width: 234px; }
     .afa-m-imgshow .list .img img {
       max-width: 100%;
       max-height: 100%;
