--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@
    ========================================================================== */
 .index-bg {
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -46,25 +46,18 @@
       color: #def505;
       font-weight: bold; }
   .welcome-info .afa-logo {
-    padding: 30px 0 20px;
-    text-align: center; }
+    padding: 20px 0; }
+    .welcome-info .afa-logo img {
+      width: 200px;
+      height: auto;
+      display: block;
+      margin: 0 auto; }
 
 .first-screen {
   z-index: 100; }
 
 .afa-index {
   z-index: 50; }
-
-.blur {
-  filter: url(blur.svg#blur);
-  /* FireFox, Chrome, Opera */
-  -webkit-filter: blur(5px);
-  /* Chrome, Opera */
-  -moz-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-  filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=5, MakeShadow=false);
-  /* IE6~IE9 */ }
 
 .menu-nav {
   position: relative;
@@ -76,7 +69,6 @@
   /* Safari */ }
   .menu-nav .box {
     height: 100%;
-    padding: 50px 0 30px;
     box-sizing: border-box;
     overflow: hidden; }
   .menu-nav .slidebox {
@@ -112,5 +104,16 @@
         top: 0;
         left: 0;
         background: transparent url("../img/trans_5.png") repeat center; }
+
+/* --------------------------------------------------------------------------
+   首页logo显示
+   -------------------------------------------------------------------------- */
+.afa-logo {
+  position: relative; }
+  .afa-logo.index {
+    position: absolute;
+    top: 50px;
+    left: 20%;
+    z-index: 999; }
 
 /*# sourceMappingURL=index.css.map */
