--- a/css/manager.css
+++ b/css/manager.css
@@ -103,74 +103,76 @@
   .afa-m-text .roll-btn-b-right {
     right: 10px; }
 
-.afa-m-imgshow .list {
-  margin-right: -8px; }
-  .afa-m-imgshow .list .item {
-    float: left;
-    margin-right: 8px;
-    width: 234px; }
-  .afa-m-imgshow .list .img {
-    display: table-cell;
-    height: 150px;
-    line-height: 150px;
-    vertical-align: middle;
-    text-align: center;
-    width: 234px; }
-    .afa-m-imgshow .list .img img {
-      max-width: 100%;
-      max-height: 100%;
-      vertical-align: middle; }
-  .afa-m-imgshow .list .user {
-    position: relative;
-    text-align: right;
-    margin: 0 0 20px 0;
-    line-height: 30px; }
-    .afa-m-imgshow .list .user .tou {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 30px;
-      height: 30px;
-      border-radius: 30px;
-      border: 2px solid #ffffff; }
-    .afa-m-imgshow .list .user a i {
+.afa-m-imgshow {
+  background: #ffffff; }
+  .afa-m-imgshow .list {
+    margin-right: -8px; }
+    .afa-m-imgshow .list .item {
+      float: left;
+      margin-right: 8px;
+      width: 234px; }
+    .afa-m-imgshow .list .img {
+      display: table-cell;
+      height: 150px;
+      line-height: 150px;
       vertical-align: middle;
-      margin: 0 3px 0 0; }
-  .afa-m-imgshow .list .hotel-info {
-    position: relative; }
-    .afa-m-imgshow .list .hotel-info .col-md-8,
-    .afa-m-imgshow .list .hotel-info .col-md-4,
-    .afa-m-imgshow .list .hotel-info .col-md-12 {
-      padding: 0; }
-    .afa-m-imgshow .list .hotel-info .name, .afa-m-imgshow .list .hotel-info .price {
-      font-family: "Microsoft YaHei"; }
-    .afa-m-imgshow .list .hotel-info .name {
-      width: 150px;
-      height: 20px;
-      margin: 0 0 8px;
-      overflow: hidden; }
-      .afa-m-imgshow .list .hotel-info .name a {
-        color: #000000;
-        font-size: 14px;
-        font-weight: bold;
-        line-height: 20px; }
-        .afa-m-imgshow .list .hotel-info .name a:hover {
-          color: #ff7e00; }
-    .afa-m-imgshow .list .hotel-info .price {
-      position: absolute;
-      top: 0;
-      right: 15px;
+      text-align: center;
+      width: 234px; }
+      .afa-m-imgshow .list .img img {
+        max-width: 100%;
+        max-height: 100%;
+        vertical-align: middle; }
+    .afa-m-imgshow .list .user {
+      position: relative;
       text-align: right;
-      font-size: 14px;
-      color: #ff7e00; }
-      .afa-m-imgshow .list .hotel-info .price b {
-        font-size: 20px; }
-    .afa-m-imgshow .list .hotel-info .address {
-      height: 20px;
-      line-height: 20px;
-      overflow: hidden;
-      font-size: 12px;
-      margin: 0 0 10px; }
+      margin: 0 0 20px 0;
+      line-height: 30px; }
+      .afa-m-imgshow .list .user .tou {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 30px;
+        height: 30px;
+        border-radius: 30px;
+        border: 2px solid #ffffff; }
+      .afa-m-imgshow .list .user a i {
+        vertical-align: middle;
+        margin: 0 3px 0 0; }
+    .afa-m-imgshow .list .hotel-info {
+      position: relative; }
+      .afa-m-imgshow .list .hotel-info .col-md-8,
+      .afa-m-imgshow .list .hotel-info .col-md-4,
+      .afa-m-imgshow .list .hotel-info .col-md-12 {
+        padding: 0; }
+      .afa-m-imgshow .list .hotel-info .name, .afa-m-imgshow .list .hotel-info .price {
+        font-family: "Microsoft YaHei"; }
+      .afa-m-imgshow .list .hotel-info .name {
+        width: 150px;
+        height: 20px;
+        margin: 0 0 8px;
+        overflow: hidden; }
+        .afa-m-imgshow .list .hotel-info .name a {
+          color: #000000;
+          font-size: 14px;
+          font-weight: bold;
+          line-height: 20px; }
+          .afa-m-imgshow .list .hotel-info .name a:hover {
+            color: #ff7e00; }
+      .afa-m-imgshow .list .hotel-info .price {
+        position: absolute;
+        top: 0;
+        right: 15px;
+        text-align: right;
+        font-size: 14px;
+        color: #ff7e00; }
+        .afa-m-imgshow .list .hotel-info .price b {
+          font-size: 20px; }
+      .afa-m-imgshow .list .hotel-info .address {
+        height: 20px;
+        line-height: 20px;
+        overflow: hidden;
+        font-size: 12px;
+        margin: 0 0 10px; }
 
 /* ==========================================================================
    全程管理页面
