--- a/css/equipment.css
+++ b/css/equipment.css
@@ -180,13 +180,15 @@
 .w-fade-in-out-wrapper-outer {
   position: relative; }
   .w-fade-in-out-wrapper-outer .wrapper-list {
+    position: relative;
     height: 400px;
     overflow: hidden; }
   .w-fade-in-out-wrapper-outer .img-item {
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
-    display: block;
+    z-index: 1;
+    width: 100%;
     height: 400px;
     overflow: hidden; }
     .w-fade-in-out-wrapper-outer .img-item a {
